--- a/librecad/src/ui/forms/tc_tracerwidget.ui
+++ b/librecad/src/ui/forms/tc_tracerwidget.ui
@@ -31,9 +31,9 @@
    <item>
     <layout class="QGridLayout" name="gridLayout">
      <item row="1" column="0">
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="polygon_button">
        <property name="text">
-        <string>PushButton</string>
+        <string>Polygon</string>
        </property>
       </widget>
      </item>
@@ -45,9 +45,9 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="circlep_button">
        <property name="text">
-        <string>PushButton</string>
+        <string>Circle3P</string>
        </property>
       </widget>
      </item>
