--- a/librecad/src/ui/forms/tc_tracerwidget.ui
+++ b/librecad/src/ui/forms/tc_tracerwidget.ui
@@ -52,9 +52,9 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QPushButton" name="pushButton_4">
+      <widget class="QPushButton" name="freehand_button">
        <property name="text">
-        <string>PushButton</string>
+        <string>FreeHand</string>
        </property>
       </widget>
      </item>
